hphp/hack/test/typecheck/array/safe_vector_array/disallows_a_variable_that_may_be_an_array_of_string_when_array_of_int_to_string_is_required.php.exp
File "disallows_a_variable_that_may_be_an_array_of_string_when_array_of_int_to_string_is_required.php", line 16, characters 29-34:
Invalid argument (Typing[4110])
File "disallows_a_variable_that_may_be_an_array_of_string_when_array_of_int_to_string_is_required.php", line 3, characters 36-53:
Expected darray<int, string>
File "disallows_a_variable_that_may_be_an_array_of_string_when_array_of_int_to_string_is_required.php", line 10, characters 12-19:
But got varray<string>
